--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!doctype html>
 <html>
   <head>
-    <title>Braill Art Generator Privacy Policy</title>
+    <title>Privacy Policy</title>
   </head>
   <body>
+    <h1> Braille Art Generator Privacy Policy</h1>
     <p>We do not store any personal data anywhere.</p>
   </body>
 </html>
