--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
   </head>
   <body>
     <h1>Braille Art Generator Privacy Policy</h1>
-    <p>We do not store any personal data anywhere.</p>
+    <p>"Braille Art Generator" does not collect any personal data.</p>
   </body>
 </html>
